fixed alignment of weekdays to date boxes

--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ body{
 #calendar ul.weekdays{
   height: 40px;
   background: #333;
+  width: 99.5%;
 }
 
 #calendar ul.weekdays li{
